<resources>
    <string name="app_name">일기 목록</string>
    <string name="btn_add">추가</string>
    <string name="btn_edit">수정</string>
    <string name="btn_del">삭제</string>
    <string name="btn_info">보기</string>
    <string name="btn_search">검색</string>
    <string name="btn_save">저장</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_start">시작하기</string>
    <string name="sname">제목</string>
    <string name="swhen">언제</string>
    <string name="swhere">어디서</string>
    <string name="detail_hint">내용을 입력하세요</string>
    <string name="name_hint">제목을 입력하세요</string>
    <string name="date_hint">날짜를 입력하세요</string>
    <string name="title1">무난한 하루</string>
    <string name="title2">행복한 하루</string>
    <string name="title3">이상한 하루</string>
    <string name="title4">슬픈 하루</string>
    <string name="title5">화가난 하루</string>
</resources>